[package]
name = "akita"
version = "0.2.1"
authors = ["Seb <thesicrs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
cli = { git = "https://github.com/sicrs/cli", version = "0.1" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"